<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.LeafApps.dragonboat.activities.CrewShowActivity">
     <!-- <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="ifRoom" /> -->
    <item android:id="@+id/action_photo" android:title="@string/photo_button"
        android:orderInCategory="20" app:showAsAction="always"
        android:icon="@drawable/ic_action_camera" />
    <item android:id="@+id/action_sort" android:title="@string/sort"
        android:orderInCategory="10" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sortieren"/>
    <item android:id="@+id/chronometerbtn" android:title="@string/chronometerbtn"
        android:orderInCategory="30" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_time"
        />
</menu>
