<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/FirstName"
        android:ems="10"
        android:id="@+id/FirstName_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxLength="17"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/LastName"
        android:ems="10"
        android:id="@+id/LastName_view"
        android:layout_below="@+id/FirstName_view"
        android:layout_centerHorizontal="true"
        android:maxLength="17"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Weight_view"
        android:layout_below="@+id/LastName_view"
        android:layout_centerHorizontal="true"
        android:hint="@string/Weight"
        android:maxLength="3"/>
</RelativeLayout>